# mani-manitO_tp_2

./: CMakeLists.txt  README.md  archivos.cpp  archivos.h  cola.cpp  cola.h  conjuntos.cpp  constantes.h  cuento.cpp  cuento.h  division-tareas.txt  escritor.cpp  escritor.h  escritores.txt  grafo.cpp  grafo.h  historica.cpp  historica.h  kruskal.cpp  kruskal.h  lectura.cpp  lectura.h  lectura.txt  lista.cpp  lista.h  lista_escritores.cpp  lista_escritores.h  lista_lecturas.cpp  lista_lecturas.h  main.cpp  main_kruskal.cpp  main_kruskal.h  manual-usuario.txt  manual.txt  menu.cpp  menu.h  nodo.h  novela.cpp  novela.h  parser.cpp  (+13 more)
header/: aem.h  arbol_minimo.h  cola.h  constantes.h  cuento.h  escritor.h  grafo.h  historica.h  kruskal.h  lectura.h  lista_escritores.h  lista_lecturas.h  menu.h  nodo.h  novela.h  parser.h  poema.h  tabla_hashing.h  vertice.h
src/: arbol_minimo.cpp  cola.cpp  cuento.cpp  escritor.cpp  grafo.cpp  historica.cpp  kruskal.cpp  lectura.cpp  lista_escritores.cpp  lista_lecturas.cpp  main.cpp  menu.cpp  novela.cpp  parser.cpp  poema.cpp  tabla_hashing.cpp  tp1  tp2  vertice.cpp
